--- a/source/index.tex
+++ b/source/index.tex
@@ -5,6 +5,7 @@
 \title {Demonstrátor systému plánování pro více agentů}
 \author {Tůma Ondřej}
 \supervisor {\kulich}
+\workname {Semestrální projekt}
 
 
 \date {Prosinec 2021}
