--- a/source/index.tex
+++ b/source/index.tex
@@ -1,5 +1,5 @@
 
-\worktype [B/CZ]
+\worktype [O/CZ]
 \faculty {F3}
 \department {Katedra kybernetiky}
 \title {Demonstrátor systému plánování pro více agentů}
