--- a/source/index.tex
+++ b/source/index.tex
@@ -28,7 +28,12 @@ V rámci řešení EU projektu SafeLog vznikl laboratorní demonstrátor s robot
     * Seznámit se s aktuální stavem vývoje demonstrátoru a se simulátorem pro multi-agentní plánování \mapfIR.
     * Upravit simulátor tak, aby sloužil jako základní uživatelské rozhraní (GUI) demonstrátoru.
     * Zobrazovat pozice robotů získané ze systému Vicon v GUI.
-    * Integrovat dodané komponenty pro plánování a generování plánů do systému.
+    * Integrovat dodané komponenty pro plánování a generování plánů do systému \label[test].
 \enditems
+
+
+
+~\ref[test]
+
 \bye
 \endtt
