--- a/source/index.tex
+++ b/source/index.tex
@@ -8,7 +8,7 @@ použité informační zdroje v souladu s Metodickým pokynem o dodržování et
 
 
 \chap Úvod
-\label[test]
+
 
 Text úvodu.
 
@@ -29,11 +29,12 @@ V rámci řešení EU projektu SafeLog vznikl laboratorní demonstrátor s robot
     * Seznámit se s aktuální stavem vývoje demonstrátoru a se simulátorem pro multi-agentní plánování \mapfIR.
     * Upravit simulátor tak, aby sloužil jako základní uživatelské rozhraní (GUI) demonstrátoru.
     * Zobrazovat pozice robotů získané ze systému Vicon v GUI.
-    * Integrovat dodané komponenty pro plánování a generování plánů do systému ~\ref[test].
+    * Integrovat dodané komponenty pro plánování a generování plánů do systému .
 \enditems
 
 
-
+% \label[test]
+% ~\ref[test]
 
 
 \bye
