--- a/source/index.tex
+++ b/source/index.tex
@@ -32,6 +32,15 @@ V rámci řešení EU projektu SafeLog vznikl laboratorní demonstrátor s robot
     * Integrovat dodané komponenty pro plánování a generování plánů do systému .
 \enditems
 
+\sec Vision
+
+Aktuálně používaný software k multiagentní simulaci umožňuje spouštění předem vygenerovaného plánu na fyzických robotech. Myšlenkou této práce je vylepšit stávající software tak, aby:
+\begitems \style n
+    * Umožňoval čistě virtuální běh
+    * Měl GUI, které zobrazí feedback od robotů.
+    * Standardizovat vstupní formát s \mapfIR
+\enditems
+
 
 % \label[test]
 % ~\ref[test]
