--- a/source/index.tex
+++ b/source/index.tex
@@ -32,6 +32,10 @@ V rámci řešení EU projektu SafeLog vznikl laboratorní demonstrátor s robot
     * Integrovat dodané komponenty pro plánování a generování plánů do systému .
 \enditems
 
+\sec Though
+The primary objective of this work is to improve the usability of current software for running simulations, and to improve the capabilities of the software.
+
+
 \sec Vision
 
 Aktuálně používaný software k multiagentní simulaci umožňuje spouštění předem vygenerovaného plánu na fyzických robotech. Myšlenkou této práce je vylepšit stávající software tak, aby:
