--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -1,2 +1,3 @@
 \def \kulich {RNDr. Miroslav Kulich, Ph.D.}
+\def \oldRepo {\ulink[https://github.com/Kei18/mapf-IR]{old version}}
 \def \mapfIR {\ulink[https://github.com/Kei18/mapf-IR]{mapf-IR}}
