--- a/source/index.tex
+++ b/source/index.tex
@@ -32,9 +32,10 @@ V rámci řešení EU projektu SafeLog vznikl laboratorní demonstrátor s robot
     * Integrovat dodané komponenty pro plánování a generování plánů do systému .
 \enditems
 
+\sec Cuirrent state
+Currently, there exists 
 \sec Though
 The primary objective of this work is to improve the usability of current software for running simulations, and to improve the capabilities of the software.
-
 
 \sec Vision
 
