--- a/source/index.tex
+++ b/source/index.tex
@@ -33,7 +33,7 @@ V rámci řešení EU projektu SafeLog vznikl laboratorní demonstrátor s robot
 \enditems
 
 \sec Cuirrent state
-Currently, there exists ¨\oldRepo
+Currently, there exists \oldRepo
 \sec Though
 The primary objective of this work is to improve the usability of current software for running simulations, and to improve the capabilities of the software.
 
