--- a/source/index.tex
+++ b/source/index.tex
@@ -34,6 +34,11 @@ V rámci řešení EU projektu SafeLog vznikl laboratorní demonstrátor s robot
 
 \sec Cuirrent state
 Currently, there exists \oldRepo of this project, that enables only basic funncionaly for the simulations. This maily includes:
+\begitems \style n
+    * Loading generated simulation data (in proprietary format)
+    * Měl GUI, které zobrazí feedback od robotů.
+    * Standardizovat vstupní formát s \mapfIR
+\enditems
 
 \sec Though
 The primary objective of this work is to improve the usability of current software for running simulations, and to improve the capabilities of the software.
