--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -1,3 +1,4 @@
 \def \kulich {RNDr. Miroslav Kulich, Ph.D.}
 \def \oldRepo {\ulink[https://github.com/Kei18/mapf-IR]{old version}}
+\def \oldFormat {\ulink[https://github.com/Kei18/mapf-IR]{proprietary format}}
 \def \mapfIR {\ulink[https://github.com/Kei18/mapf-IR]{mapf-IR}}
