--- a/source/index.tex
+++ b/source/index.tex
@@ -35,7 +35,7 @@ V rámci řešení EU projektu SafeLog vznikl laboratorní demonstrátor s robot
 \sec Cuirrent state
 Currently, there exists {\oldRepo} of this project, that enables only basic funncionaly for the simulations. This maily includes:
 \begitems \style n
-    * Loading generated simulation data (in \oldFormat)
+    * Loading generated simulation data (in {\oldFormat})
     * Měl GUI, které zobrazí feedback od robotů.
     * Standardizovat vstupní formát s \mapfIR
 \enditems
