--- a/source/index.tex
+++ b/source/index.tex
@@ -37,7 +37,7 @@ Currently, there exists {\oldRepo} of this project, that enables only basic funn
 \begitems \style n
     * Loading generated simulation data (in {\oldFormat})
     * Měl GUI, které zobrazí feedback od robotů.
-    * Standardizovat vstupní formát s \mapfIR
+    * Standardizovat vstupní formát s {\mapfIR}
 \enditems
 
 \sec Though
