--- a/source/index.tex
+++ b/source/index.tex
@@ -36,7 +36,7 @@ V rámci řešení EU projektu SafeLog vznikl laboratorní demonstrátor s robot
 Currently, there exists {\oldRepo} of this project, that enables only basic funncionaly for the simulations. This maily includes:
 \begitems \style n
     * Loading generated simulation data (in {\oldFormat})
-    * Měl GUI, které zobrazí feedback od robotů.
+    * Sending commands in predefined order to the robots
     * Standardizovat vstupní formát s {\mapfIR}
 \enditems
 
