--- a/source/index.tex
+++ b/source/index.tex
@@ -41,6 +41,7 @@ Currently, there exists {\oldRepo} of this project, that enables only basic funn
 \enditems
 
 It does the basics necessary to run the simulation. But it does not enable the user to adjust or view the result.
+The {\oldRepo} receives feedback from robots after command execution. It has no continuous data about the robots real-world positions.
 
 \sec Though
 The primary objective of this work is to improve the usability of current software for running simulations, and to improve the capabilities of the software.
