--- a/source/index.tex
+++ b/source/index.tex
@@ -32,7 +32,7 @@ V rámci řešení EU projektu SafeLog vznikl laboratorní demonstrátor s robot
     * Integrovat dodané komponenty pro plánování a generování plánů do systému .
 \enditems
 
-\sec Cuirrent state
+\sec Current state
 Currently, there exists {\oldRepo} of this project, that enables only basic funncionaly for the simulations. This maily includes:
 
 \begitems \style n
@@ -41,7 +41,7 @@ Currently, there exists {\oldRepo} of this project, that enables only basic funn
 \enditems
 
 It does the basics necessary to run the simulation. But it does not enable the user to adjust or view the result.
-The {\oldRepo} receives feedback from robots after command execution. It has no continuous data about the robots real-world positions.
+The {\oldRepo} receives feedback from robots after command execution. It has no continuous data about the robots real-world positions. If collision happens between two robots, the {\oldRepo} has no way of detecting and adjusting the robots paths
 
 \sec Though
 The primary objective of this work is to improve the usability of current software for running simulations, and to improve the capabilities of the software.
