--- a/source/params.tex
+++ b/source/params.tex
@@ -1,5 +1,5 @@
 \worktype [O/EN]
-\workname {Semestrální projekt}
+\workname {Semestral project}
 \faculty {F3}
 \department {Katedra kybernetiky}
 \title {Demonstrátor systému plánování pro více agentů}
