--- a/source/params.tex
+++ b/source/params.tex
@@ -1,7 +1,7 @@
 \worktype [O/EN]
 \workname {Semestral project}
 \faculty {F3}
-\department {Katedra kybernetiky}
+\department {Department of Cybernetics}
 \title {Demonstrátor systému plánování pro více agentů}
 \author {Tůma Ondřej}
 \supervisor {\kulich}
