--- a/source/params.tex
+++ b/source/params.tex
@@ -2,7 +2,7 @@
 \workname {Semestral project}
 \faculty {F3}
 \department {Department of Cybernetics}
-\title {Demonstrátor systému plánování pro více agentů}
+\title {Multiagent planning system demonstrator}
 \author {Tůma Ondřej}
 \supervisor {\kulich}
 \date {Prosinec 2021}
