--- a/source/index.tex
+++ b/source/index.tex
@@ -1,4 +1,9 @@
-
+\abstractEN {This document is for testing purpose only.}
+\abstractCZ {Tato práce analyzuje možnosti a rozšiřuje demonstrátor multiagentních systémů.}
+\thanks {Chtěl bych poděkovat především vedoucímu práce \kulich za skvělé uvedení do problematiky a za konzultace, které byly nezbytně nutné pro dokončení projektu.}
+\declaration {Prohlašuji, že jsem předloženou práci vypracoval samostatná a že jsem uvedl veškeré
+použité informační zdroje v souladu s Metodickým pokynem o dodržování etických principů při přípravě vysokoškolských závěrečných prací.}
+\makefront
 
 
 
