--- a/source/index.tex
+++ b/source/index.tex
@@ -1,7 +1,9 @@
 \abstractEN {
     This work is analyzing and improving upon the multiagent planning system demonstrator currently used at the Department of Cybernetics.
     The main objective is to improve existing funccionality and add new features.}
-\abstractCZ {Tato práce analyzuje možnosti a rozšiřuje demonstrátor multiagentních systémů.}
+\abstractCZ {
+    Tato práce analyzuje možnosti a rozšiřuje demonstrátor multiagentních systémů.
+    }
 \thanks {Chtěl bych poděkovat především vedoucímu práce \kulich za skvělé uvedení do problematiky a za konzultace, které byly nezbytně nutné pro dokončení projektu.}
 \declaration {Prohlašuji, že jsem předloženou práci vypracoval samostatná a že jsem uvedl veškeré
 použité informační zdroje v souladu s Metodickým pokynem o dodržování etických principů při přípravě vysokoškolských závěrečných prací.}
