--- a/source/index.tex
+++ b/source/index.tex
@@ -4,7 +4,10 @@
 \abstractCZ {
     Tato práce analyzuje možnosti a rozšiřuje demonstrátor multiagentních systémů.
     }
-\thanks {Chtěl bych poděkovat především vedoucímu práce \kulich za skvělé uvedení do problematiky a za konzultace, které byly nezbytně nutné pro dokončení projektu.}
+\thanks {
+    Chtěl bych poděkovat především vedoucímu práce \kulich za skvělé uvedení do problematiky a za konzultace,
+     které byly nezbytně nutné pro dokončení projektu.
+    }
 \declaration {Prohlašuji, že jsem předloženou práci vypracoval samostatná a že jsem uvedl veškeré
 použité informační zdroje v souladu s Metodickým pokynem o dodržování etických principů při přípravě vysokoškolských závěrečných prací.}
 \makefront
