--- a/source/index.tex
+++ b/source/index.tex
@@ -1,6 +1,7 @@
 \abstractEN {
     This work is analyzing and improving upon the multiagent planning system demonstrator currently used at the Department of Cybernetics.
-    The main objective is to improve existing funccionality, add new features and enable the usage of {\mapfIR} format
+    The main objective is to improve existing funccionality, add new features and enable the usage of {\mapfIR} format. 
+    It will greatly improve developer experience for other students working and running simulations developing alhorithms for the {\mapfIR} solver.
     }
 \abstractCZ {
     Tato práce analyzuje možnosti a rozšiřuje demonstrátor multiagentních systémů.
