--- a/source/index.tex
+++ b/source/index.tex
@@ -36,6 +36,8 @@ The {\oldRepo} receives feedback from robots after command execution. It has no 
 If collision happens between two robots, the {\oldRepo} has no way of detecting and adjusting the robots paths.
 Furthermore, it takes a lot of developer effort to setup the simulation.
 
+Current proprietary format is not compatible with {\mapfIR} input nor ouput format, which makes the software at its current state useless for students developing algorithms for the metnioned solver.
+
 \sec Vision
 
 
