--- a/source/index.tex
+++ b/source/index.tex
@@ -31,8 +31,7 @@ Currently, there exists {\oldRepo} of this project, that enables only basic funn
     * Sending commands in predefined order to the robots
 \enditems
 
-It does the basics necessary to run the simulation. But it does not enable the user to adjust or view the result.
-The {\oldRepo} receives feedback from robots after command execution. It has no continuous data about the robots real-world positions. 
+It does the basics necessary to run the simulation. But it does not enable the user to adjust or view the result. The {\oldRepo} receives feedback from robots after command execution. It has no continuous data about the robots real-world positions. 
 If collision happens between two robots, the {\oldRepo} has no way of detecting and adjusting the robots paths.
 Furthermore, it takes a lot of developer effort to setup the simulation.
 
