--- a/source/index.tex
+++ b/source/index.tex
@@ -24,7 +24,7 @@ V rámci řešení EU projektu SafeLog vznikl laboratorní demonstrátor s robot
 \enditems
 
 \sec Current state
-Currently, there exists {\oldRepo} of this project, that enables only basic funncionaly for the simulations. This maily includes:
+Currently, there exists {\oldRepo} of this project, that enables only basic functionality for the simulations. This maily includes:
 
 \begitems \style n
     * Loading generated simulation data (in {\oldFormat})
