--- a/source/index.tex
+++ b/source/index.tex
@@ -17,7 +17,7 @@ In colaboration with SafeLog, the laboratory demostrator TurtleBot was created f
 
 \begitems \style n
     * Analyze multi-agent demonstrator and simulator {\mapfIR} and its current state of development 
-    * Edit the simulator to serve as basic user interface for demostrator
+    * Edit the simulator to serve as basic user interface for demonstrator
     * Upravit simulátor tak, aby sloužil jako základní uživatelské rozhraní (GUI) demonstrátoru.
     * Zobrazovat pozice robotů získané ze systému Vicon v GUI.
     * Integrovat dodané komponenty pro plánování a generování plánů do systému .
