--- a/source/index.tex
+++ b/source/index.tex
@@ -19,7 +19,7 @@ In colaboration with SafeLog, the laboratory demostrator TurtleBot was created f
     * Analyze multi-agent demonstrator and simulator {\mapfIR} and its current state of development 
     * Edit the simulator to serve as basic user interface for demonstrator (GUI)
     * Display robot positions received from the Vicon system
-    * Integrate componenets for planning and generating plans into the system
+    * Integrate componenets for planning and generating plans into the system.
     * Integrovat dodané komponenty pro plánování a generování plánů do systému .
 \enditems
 
