--- a/source/index.tex
+++ b/source/index.tex
@@ -22,7 +22,7 @@ In collaboration with SafeLog, the laboratory demonstrator TurtleBot was created
     * Integrate componenets for planning and generating plans into the system.
 \enditems
 
-\sec Current state
+\sec Demonstrator current state analysis
 Currently, there exists {\oldRepo} of this project, that enables only basic functionality for the simulations. This maily includes:
 
 \begitems \style n
