--- a/source/index.tex
+++ b/source/index.tex
@@ -32,7 +32,7 @@ Currently, there exists {\oldRepo} of this project, that enables only basic func
 
 It does the basics necessary to run the simulation. But it does not enable the user to adjust or view the result. The {\oldRepo} receives feedback from robots after command execution. It has no continuous data about the robots real-world positions. If collision happens between two robots, the {\oldRepo} has no way of detecting and adjusting the robots paths.
 
-Current proprietary format is not compatible with {\mapfIR} input nor ouput format, which makes the software at its current state useless for students developing algorithms for the mentioned solver. And great amount of effort is required for students to run a simulation using this software, if they happened to be working with compatible .
+Current proprietary format is not compatible with {\mapfIR} input nor ouput format, which makes the software at its current state useless for students developing algorithms for the mentioned solver. And great amount of effort is required for students to run a simulation using this software, if they happened to be working with compatible format.
 
 \sec Vision
 
