--- a/source/index.tex
+++ b/source/index.tex
@@ -36,10 +36,10 @@ Current proprietary format is not compatible with {\mapfIR} input nor ouput form
 
 \sec Vision
 
-Aktuálně používaný software k multiagentní simulaci umožňuje spouštění předem vygenerovaného plánu na fyzických robotech. Myšlenkou této práce je vylepšit stávající software tak, aby:
+The goal is to create version of the demonstrator with the following features:
 \begitems \style n
-    * Umožňoval čistě virtuální běh
-    * Měl GUI, které zobrazí feedback od robotů.
+    * Purely virtual run
+    * GUI with information about current run
     * Standardizovat vstupní formát s \mapfIR
 \enditems
 
