--- a/source/index.tex
+++ b/source/index.tex
@@ -40,7 +40,7 @@ The goal is to create version of the demonstrator with the following features:
 \begitems \style n
     * Purely virtual run
     * GUI with information about current run
-    * Standardizovat vstupní formát s \mapfIR
+    * Standardize input and output formats with \mapfIR
 \enditems
 
 
