--- a/source/index.tex
+++ b/source/index.tex
@@ -34,9 +34,10 @@ It does the basics necessary to run the simulation. But it does not enable the u
 
 Current proprietary format is not compatible with {\mapfIR} input nor ouput format, which makes the software at its current state useless for students developing algorithms for the mentioned solver. And great amount of effort is required for students to run a simulation using this software, if they happened to be working with compatible format.
 
-\sec Vision
+\sec End goal
 
-The goal is to create version of the demonstrator with the following features:
+The goal is to create version of the demonstrator that would improve developer experience, and enable the possibility of presenting it to external visitors for representational purposes.
+It should include the following features:
 \begitems \style n
     * Purely virtual run
     * GUI with information about current run
