--- a/source/index.tex
+++ b/source/index.tex
@@ -36,7 +36,7 @@ Current proprietary format is not compatible with {\mapfIR} input nor ouput form
 
 \sec End goal
 
-The goal is to create version of the demonstrator that would improve developer experience for developers working on algorithmic solution for {\mapfIR}, and enable the possibility of presenting it to external visitors for representational purposes.
+The goal is to create version of the demonstrator that would improve developer experience for developers working on algorithmic solution for {\mapfIR}, and enable the possibility of presenting it to external visitors for representational purposes (ie. possible applicants).
 It should include the following features:
 \begitems \style n
     * Purely virtual run
