--- a/source/index.tex
+++ b/source/index.tex
@@ -37,6 +37,9 @@ Current proprietary format is not compatible with {\mapfIR} input nor ouput form
 \sec End goal
 
 The goal is to create version of the demonstrator that would improve developer experience for developers working on algorithmic solution for {\mapfIR}, and enable the possibility of presenting it to external visitors for representational purposes (ie. possible applicants).
+
+Therefore the department will benefit internally from the increased productivity, and lesser time spent on demonstration setup, and externally when presenting to possible applicants.
+
 It should include the following features:
 \begitems \style n
     * Purely virtual run
