--- a/source/index.tex
+++ b/source/index.tex
@@ -1,7 +1,7 @@
 \chap Introduction
 
 
-Text úvodu.
+In this chapter, I will be describing the original assignment, the benefits of this project and the current state of the work I will be basing this project upon.
 
 \sec Original assignment
 In collaboration with SafeLog, the laboratory demonstrator TurtleBot was created for robot fleet trajectory planning in automated warehouses. The goal of this semestral project is to analyze this framework and improve upon its codebase. The tasks are as follows:
