--- a/source/index.tex
+++ b/source/index.tex
@@ -26,6 +26,7 @@ It does the basics necessary to run the simulation. But it does not enable the u
 Current proprietary format is not compatible with {\mapfIR} input nor ouput format, which makes the software at its current state useless for students developing algorithms for the mentioned solver. And great amount of effort is required for students to run a simulation using this software, if they happened to be working with compatible format.
 
 \sec Demonstrator proprietary format
+The format used to represent the map is XML 
 
 \sec End goal
 
