--- a/source/index.tex
+++ b/source/index.tex
@@ -10,7 +10,7 @@ In collaboration with SafeLog, the laboratory demonstrator TurtleBot was created
     * Analyze multi-agent demonstrator and simulator {\mapfIR} and its current state of development 
     * Edit the simulator to serve as basic user interface for demonstrator (GUI)
     * Display robot positions received from the Vicon system
-    * Integrate componenets for planning and generating plans into the system.
+    * Integrate components for planning and generating plans into the system.
 \enditems
 
 \sec Demonstrator current state analysis
