--- a/source/index.tex
+++ b/source/index.tex
@@ -14,7 +14,7 @@ In collaboration with SafeLog, the laboratory demonstrator TurtleBot was created
 \enditems
 
 \sec Demonstrator current state analysis
-Currently, there exists {\oldRepo} of this project, that enables only basic functionality for the simulations. This maily includes:
+Currently, there exists {\oldRepo} of this project, that enables only basic functionality for the simulations. This mainly includes:
 
 \begitems \style n
     * Loading generated simulation data (in {\oldFormat})
