--- a/source/index.tex
+++ b/source/index.tex
@@ -18,7 +18,7 @@ Currently, there exists {\oldRepo} of this project, that enables only basic func
 
 \begitems \style n
     * Loading generated simulation data (in {\oldFormat})
-    * Sending commands in predefined order to the robots
+    * Sending commands in predefined order to the physical robots
     * Run against physical robots in a lab
 \enditems
 
