--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -2,3 +2,5 @@
 \def \oldRepo {\ulink[https://github.com/Kei18/mapf-IR]{old version}}
 \def \oldFormat {\ulink[https://github.com/Kei18/mapf-IR]{proprietary format}}
 \def \mapfIR {\ulink[https://github.com/Kei18/mapf-IR]{mapf-IR}}
+\def \cmake {\ulink[https://github.com/Kei18/mapf-IR]{Cmake}}
+\def \makefile {\ulink[https://github.com/Kei18/mapf-IR]{Makefile}}
