--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -4,3 +4,4 @@
 \def \mapfIR {\ulink[https://github.com/Kei18/mapf-IR]{mapf-IR}}
 \def \cmake {\ulink[https://github.com/Kei18/mapf-IR]{Cmake}}
 \def \makefile {\ulink[https://github.com/Kei18/mapf-IR]{Makefile}}
+\def \of {\ulink[https://github.com/Kei18/mapf-IR]{openFrameworks}}
