--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -5,3 +5,11 @@
 \def \cmake {\ulink[https://github.com/Kei18/mapf-IR]{Cmake}}
 \def \makefile {\ulink[https://github.com/Kei18/mapf-IR]{Makefile}}
 \def \of {\ulink[https://github.com/Kei18/mapf-IR]{openFrameworks}}
+
+\def \uml {
+    \midinsert
+    \clabel[Části klasické akustické kytary]{Části klasické akustické kytary}
+    \picw=8.5cm \cinspic {source/images/kytara.jpeg}
+    \caption/f UML Diagram komunikační části
+    \endinsert
+}
