--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -8,7 +8,7 @@
 
 \def \uml {
     \midinsert
-    \clabel[Části klasické akustické kytary]{Části klasické akustické kytary}
+    \clabel[communication_uml]{UML Diagram komunikační části}
     \picw=8.5cm \cinspic {source/images/kytara.jpeg}
     \caption/f UML Diagram komunikační části
     \endinsert
