--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -9,7 +9,7 @@
 \def \uml {
     \midinsert
     \clabel[communication_uml]{UML Diagram komunikační části}
-    \picw=8.5cm \cinspic {source/images/kytara.jpeg}
+    \picw=8.5cm \cinspic {../source/images/kytara.jpeg}
     \caption/f UML Diagram komunikační části
     \endinsert
 }
