--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -6,10 +6,10 @@
 \def \makefile {\ulink[https://github.com/Kei18/mapf-IR]{Makefile}}
 \def \of {\ulink[https://github.com/Kei18/mapf-IR]{openFrameworks}}
 
-\def \uml {
+\def \communication_uml {
     \midinsert
     \clabel[communication_uml]{UML Diagram komunikační části}
-    \picw=8.5cm \cinspic {../source/images/communication_uml.svg}
+    \picw=8.5cm \cinspic {../assets/images/communication_uml.png}
     \caption/f UML Diagram komunikační části
     \endinsert
 }
