--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -5,6 +5,8 @@
 \def \cmake {\ulink[https://github.com/Kei18/mapf-IR]{Cmake}}
 \def \makefile {\ulink[https://github.com/Kei18/mapf-IR]{Makefile}}
 \def \of {\ulink[https://github.com/Kei18/mapf-IR]{openFrameworks}}
+\def \nanomsg {\ulink[https://nanomsg.org/]{nanomsg}}
+
 
 \def \communication_uml {
     \midinsert
