--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -10,7 +10,7 @@
 
 \def \communication_uml {
     \midinsert
-    \clabel[communication_uml]{UML Diagram komunikační části}
+    \clabel[communication_uml]{Communication UML}
     \picw=14.5cm \cinspic {../assets/images/communication_uml.png}
     \caption/f UML Diagram komunikační části
     \endinsert
