--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -12,6 +12,6 @@
     \midinsert
     \clabel[communication_uml]{Communication UML}
     \picw=14.5cm \cinspic {../assets/images/communication_uml.png}
-    \caption/f UML Diagram komunikační části
+    \caption/f Communication UML
     \endinsert
 }
