--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -8,10 +8,18 @@
 \def \nanomsg {\ulink[https://nanomsg.org/]{nanomsg}}
 
 
-\def \communication_uml {
+\def \communicationUml {
     \midinsert
     \clabel[communication_uml]{Communication UML}
     \picw=14.5cm \cinspic {../assets/images/communication_uml.png}
     \caption/f Communication UML
     \endinsert
 }
+
+\def \communicationSequence {
+    \midinsert
+    \clabel[communication_sequence_diagram]{Communication sequence diagram}
+    \picw=14.5cm \cinspic {../assets/images/communication_sequence_diagram.png}
+    \caption/f Communication sequence diagram
+    \endinsert
+} 
