--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -14,3 +14,7 @@
     Prohlašuji, že jsem předloženou práci vypracoval samostatná a že jsem uvedl veškeré
     použité informační zdroje v souladu s Metodickým pokynem o dodržování etických principů při přípravě vysokoškolských závěrečných prací.
 }
+
+\specification {
+    
+}
