--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -4,8 +4,8 @@
 \def \mapfIR {\ulink[https://github.com/Kei18/mapf-IR]{mapf-IR}}
 \def \cmake {\ulink[https://github.com/Kei18/mapf-IR]{Cmake}}
 \def \makefile {\ulink[https://github.com/Kei18/mapf-IR]{Makefile}}
-\def \of {openFrameworks\urlnote{https://github.com/Kei18/mapf-IR}}
-\def \nanomsg {nanomsg\urlnote{https://nanomsg.org/}}
+\def \of {{openFrameworks}\urlnote{https://github.com/Kei18/mapf-IR}}
+\def \nanomsg {{nanomsg}\urlnote{https://nanomsg.org/}}
 
 
 \def \communicationUml {
