--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -3,7 +3,7 @@
 \def \oldFormat {\ulink[https://github.com/Kei18/mapf-IR]{proprietary format}}
 \def \mapfIR {\ulink[https://github.com/Kei18/mapf-IR]{mapf-IR}}
 \def \cmake {\ulink[https://github.com/Kei18/mapf-IR]{Cmake}}
-\def \makefile {\ulink[https://github.com/Kei18/mapf-IR]{Makefile}}
+\def \makefile {{Makefile}\urlnote{https://nanomsg.org/}}
 \def \of {{openFrameworks}\urlnote{https://github.com/Kei18/mapf-IR}}
 \def \nanomsg {{nanomsg}\urlnote{https://nanomsg.org/}}
 
