--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -2,7 +2,7 @@
 \def \oldRepo {\ulink[https://github.com/Kei18/mapf-IR]{old version}}
 \def \oldFormat {\ulink[https://github.com/Kei18/mapf-IR]{proprietary format}}
 \def \mapfIR {\ulink[https://github.com/Kei18/mapf-IR]{mapf-IR}}
-\def \cmake {\ulink[https://github.com/Kei18/mapf-IR]{Cmake}}
+\def \cmake {{Cmake}\urlnote{https://nanomsg.org/}}
 \def \makefile {{Makefile}\urlnote{https://nanomsg.org/}}
 \def \of {{openFrameworks}\urlnote{https://github.com/Kei18/mapf-IR}}
 \def \nanomsg {{nanomsg}\urlnote{https://nanomsg.org/}}
