--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -1,7 +1,7 @@
 \def \kulich {RNDr. Miroslav Kulich, Ph.D.}
 \def \oldRepo {\ulink[https://github.com/Kei18/mapf-IR]{old version}}
 \def \oldFormat {\ulink[https://github.com/Kei18/mapf-IR]{proprietary format}}
-\def \mapfIR {\ulink[https://github.com/Kei18/mapf-IR]{mapf-IR}}
+\def \mapfIR {{mapf-IR}\urlnote{https://nanomsg.org/}}
 \def \cmake {{Cmake}\urlnote{https://nanomsg.org/}}
 \def \makefile {{Makefile}\urlnote{https://nanomsg.org/}}
 \def \of {{openFrameworks}\urlnote{https://github.com/Kei18/mapf-IR}}
