--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -1,6 +1,6 @@
 \def \kulich {RNDr. Miroslav Kulich, Ph.D.}
 \def \oldRepo {\ulink[https://github.com/Kei18/mapf-IR]{old version}}
-\def \oldFormat {\ulink[https://github.com/Kei18/mapf-IR]{proprietary format}}
+\def \oldFormat {{old format}\urlnote{https://nanomsg.org/}}
 \def \mapfIR {{mapf-IR}\urlnote{https://nanomsg.org/}}
 \def \cmake {{Cmake}\urlnote{https://nanomsg.org/}}
 \def \makefile {{Makefile}\urlnote{https://nanomsg.org/}}
