--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -14,6 +14,7 @@
     \picw=14.5cm \cinspic {../assets/images/communication_uml.png}
     \caption/f Communication UML
     \endinsert
+    \break
 }
 
 \def \communicationSequence {
