--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -16,5 +16,13 @@
 }
 
 \specification {
-    
+    Original assignment
+    In collaboration with SafeLog, the laboratory demonstrator TurtleBot was created for robot fleet trajectory planning in automated warehouses. The goal of this semestral project is to analyze this framework and improve upon its codebase. The tasks are as follows:
+
+    \begitems \style n
+        * Analyze multi-agent demonstrator and simulator {\mapfIR} and its current state of development 
+        * Edit the simulator to serve as basic user interface for demonstrator (GUI)
+        * Display robot positions received from the Vicon system
+        * Integrate components for planning and generating plans into the system.
+    \enditems
 }
