--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -17,9 +17,13 @@
 
 \specification {
     In collaboration with SafeLog, the laboratory demonstrator TurtleBot was created for robot fleet trajectory planning in automated warehouses. The goal of this semestral project is to analyze this framework and improve upon its codebase. The tasks are as follows:
+    \hfill \break
     Analyze multi-agent demonstrator and simulator {\mapfIR} and its current state of development 
+    \hfill \break
     Edit the simulator to serve as basic user interface for demonstrator (GUI)
+    \hfill \break
     Display robot positions received from the Vicon system
+    \hfill \break
     Integrate components for planning and generating plans into the system.
     
 }
