--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -7,7 +7,7 @@
     Tato práce analyzuje možnosti a rozšiřuje demonstrátor multiagentních systémů.
     }
 \thanks {
-    Chtěl bych poděkovat především vedoucímu práce \kulich za skvělé uvedení do problematiky a za konzultace,
+    First and foremost I would like to thank to \kulich for great support and 
      které byly nezbytně nutné pro dokončení projektu.
     }
 \declaration {
