--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -7,8 +7,17 @@
     Tato práce analyzuje možnosti a rozšiřuje demonstrátor multiagentních systémů.
     }
 \thanks {
-    First and foremost I would like to thank to \kulich for great support and 
-     které byly nezbytně nutné pro dokončení projektu.
+    I would really like to thank my supervisor
+    \kulich for great mentoring and guidance. A large part of this work
+    was developed within the Safelog project,
+    which also gave me the opportunity to
+    test the developed Fleet Management System with real industrial AGVs and gain
+    valuable experience from working in the
+    applied-robotics environment. Finally, I
+    would like to acknowledge the co-authors
+    of the Fleet Management System and its
+    components, mainly Ing. Lukáš Bertl and
+    Ing. Jakub Hvězda Ph.D..
     }
 \declaration {
     Prohlašuji, že jsem předloženou práci vypracoval samostatná a že jsem uvedl veškeré
