--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -1,4 +1,5 @@
 \def \kulich {RNDr. Miroslav Kulich, Ph.D.}
+\def \rybecky {Ing. Tomáš Rybecký}
 \def \oldRepo {{old version}\urlnote{https://github.com/Kei18/mapf-IR}}
 \def \oldFormat {{old format}\urlnote{https://nanomsg.org/}}
 \def \mapfIR {{mapf-IR}\urlnote{https://nanomsg.org/}}
