--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -8,16 +8,7 @@
     }
 \thanks {
     I would really like to thank my supervisor
-    \kulich for great mentoring and guidance. A large part of this work
-    was developed within the Safelog project,
-    which also gave me the opportunity to
-    test the developed Fleet Management System with real industrial AGVs and gain
-    valuable experience from working in the
-    applied-robotics environment. Finally, I
-    would like to acknowledge the co-authors
-    of the Fleet Management System and its
-    components, mainly Ing. Lukáš Bertl and
-    Ing. Jakub Hvězda Ph.D..
+    \kulich for great mentoring and guidance. I would also like to thank to \rybecky for providing the base software solution and for introducing me to the problem domain.
     }
 \declaration {
     Prohlašuji, že jsem předloženou práci vypracoval samostatná a že jsem uvedl veškeré
