--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -8,7 +8,7 @@
     }
 \thanks {
     I would really like to thank my supervisor
-    \kulich for great mentoring and guidance. I would also like to thank to \rybecky for providing the base software solution and for introducing me to the problem domain.
+    \kulich for great mentoring and guidance and providing great advice when it was needed. I would also like to thank to \rybecky for providing the base software solution and for introducing me to the problem domain.
     }
 \declaration {
     Prohlašuji, že jsem předloženou práci vypracoval samostatná a že jsem uvedl veškeré
