--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -9,10 +9,7 @@
 \thanks {
     I would really like to thank my supervisor
     \kulich for great mentoring and guidance and providing great advice when it was needed. I would also like to thank to \rybecky for providing the base software solution and for introducing me to the problem domain. Finally, I
-    would like to acknowledge the co-authors
-    of the Fleet Management System and its
-    components, mainly Ing. Lukáš Bertl and
-    Ing. Jakub Hvězda Ph.D..
+    would like to acknowledge the original co-authors of the Fleet Management System and its components, mainly Ing. Lukáš Bertl and Ing. Jakub Hvězda Ph.D..
     }
 \declaration {
     Prohlašuji, že jsem předloženou práci vypracoval samostatná a že jsem uvedl veškeré
