--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -12,8 +12,10 @@
     would like to acknowledge the  co-authors of the original Fleet Management System and its components, mainly Ing. Lukáš Bertl and Ing. Jakub Hvězda Ph.D..
     }
 \declaration {
-    Prohlašuji, že jsem předloženou práci vypracoval samostatná a že jsem uvedl veškeré
-    použité informační zdroje v souladu s Metodickým pokynem o dodržování etických principů při přípravě vysokoškolských závěrečných prací.
+    I declare that the presented work was developed independently and that I have listed all sources of information used within it in accordance with the methodical instructions for observing the ethical principles in the preparation of university theses.
+Prague, date 18. May 2020
+............................
+signature
 }
 
 \specification {
