--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -7,7 +7,7 @@
 \def \makefile {{Makefile}\urlnote{https://nanomsg.org/}}
 \def \of {{openFrameworks}\urlnote{https://github.com/Kei18/mapf-IR}}
 \def \nanomsg {{nanomsg}\urlnote{https://nanomsg.org/}}
-
+\def \br {\hfill \break}
 
 \def \communicationUml {
     \midinsert
