--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -14,8 +14,7 @@
 \declaration {
     I declare that the presented work was developed independently and that I have listed all sources of information used within it in accordance with the methodical instructions for observing the ethical principles in the preparation of university theses.
     
-    \centerline
-    Prague, date 18. May 2020
+    \centerline {Prague, date 18. May 2020}
 ............................
 signature
     
