--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -16,7 +16,7 @@
     
     \centerline {Prague, date 18. May 2020}
     \centerline {............................}
-signature
+    \centerline {signature}
     
     
 }
