--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -23,5 +23,12 @@
     \picw=14.5cm \cinspic {../assets/images/communication_sequence_diagram.png}
     \caption/f Communication sequence diagram
     \endinsert
-    
+} 
+
+\def \mapfir_gui {
+    \midinsert
+    \clabel[mapfir_gui]{mapf-IR GUI}
+    \picw=14.5cm \cinspic {../assets/images/arena_100agents.gif}
+    \caption/f mapf-IR GUI
+    \endinsert
 } 
