--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -25,7 +25,7 @@
     \endinsert
 } 
 
-\def \mapfir_gui {
+\def \mapfirGui {
     \midinsert
     \clabel[mapfir_gui]{mapf-IR GUI}
     \picw=14.5cm \cinspic {../assets/images/arena_100agents.gif}
