--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -28,7 +28,7 @@
 \def \mapfirGui {
     \midinsert
     \clabel[mapfir_gui]{mapf-IR GUI}
-    \picw=14.5cm \cinspic {../assets/images/arena_100agents.gif}
+    \picw=14.5cm \cinspic {../assets/images/arena_100agents-1.png}
     \caption/f mapf-IR GUI
     \endinsert
 } 
