--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -31,4 +31,5 @@
     \picw=10cm \cinspic {../assets/images/arena_100agents-1.png}
     \caption/f mapf-IR GUI
     \endinsert
+    \cite[MAPFIR:REPO_GUI_IMAGE]
 } 
