--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -29,7 +29,7 @@
     \midinsert
     \clabel[mapfir_gui]{mapf-IR GUI}
     \picw=10cm \cinspic {../assets/images/arena_100agents-1.png}
-    \caption/f mapf-IR GUI
+    \caption/f mapf-IR GUI \cite[MAPFIR:REPO_GUI_IMAGE]
     \endinsert
-    \cite[MAPFIR:REPO_GUI_IMAGE]
+    
 } 
