--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -7,6 +7,8 @@
 \def \makefile {{Makefile}\urlnote{https://nanomsg.org/}}
 \def \of {{openFrameworks}\urlnote{https://github.com/Kei18/mapf-IR}}
 \def \nanomsg {{nanomsg}\urlnote{https://nanomsg.org/}}
+\def \ofxCMake {\ulink[https://github.com/Kei18/mapf-IR]{ofxCMake}}
+\def \ofnode {\ulink[https://github.com/Kei18/mapf-IR]{ofnode}}
 \def \br {\hfill \break}
 
 \def \communicationUml {
