--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -34,3 +34,11 @@
     \caption/f mapf-IR GUI \cite[MAPFIR:REPO_GUI_IMAGE]
     \endinsert
 } 
+
+\def \mapfirInputFormat {
+    \midinsert
+    \clabel[mapfir_gui]{mapf-IR input format}
+    \picw=10cm \cinspic {../assets/images/arena_100agents-1.png}
+    \caption/f mapf-IR input format
+    \endinsert
+} 
