--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -37,8 +37,8 @@
 
 \def \mapfirInputFormat {
     \midinsert
-    \clabel[mapfir_gui]{mapf-IR input format}
-    \picw=10cm \cinspic {../assets/images/arena_100agents-1.png}
+    \clabel[mapfir_input_format]{mapf-IR input format}
+    \picw=10cm \cinspic {../assets/images/mapfir_input_format.png}
     \caption/f mapf-IR input format
     \endinsert
 } 
