--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -42,3 +42,11 @@
     \caption/f mapf-IR input format
     \endinsert
 } 
+
+\def \mapfirOutputFormat {
+    \midinsert
+    \clabel[mapfir_output_format]{mapf-IR output format}
+    \picw=5cm \cinspic {../assets/images/mapfir_output_format.png}
+    \caption/f mapf-IR output format
+    \endinsert
+} 
