--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -50,3 +50,11 @@
     \caption/f mapf-IR output format
     \endinsert
 } 
+
+\def \fleetControlGui {
+    \midinsert
+    \clabel[fleet_control_user_interface]{GUI}
+    \picw=5cm \cinspic {../assets/images/fleet_control_user_interface.png}
+    \caption/f GUI
+    \endinsert
+} 
