--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -2,7 +2,7 @@
 \def \rybecky {Ing. Tomáš Rybecký}
 \def \oldRepo {{old version}\urlnote{https://github.com/Kei18/mapf-IR}}
 \def \oldFormat {{old format}\urlnote{https://nanomsg.org/}}
-\def \mapfIR {{mapf-IR}\urlnote{https://github.com/Kei18/mapf-IR}}
+\def \mapfIR {{mapf-IR}\urlnote{https://cmake.org/}}
 \def \cmake {{Cmake}\urlnote{https://nanomsg.org/}}
 \def \makefile {{Makefile}\urlnote{https://nanomsg.org/}}
 \def \of {{openFrameworks}\urlnote{https://github.com/Kei18/mapf-IR}}
