--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -4,7 +4,7 @@
 \def \oldFormat {{old format}\urlnote{https://nanomsg.org/}}
 \def \mapfIR {{mapf-IR}\urlnote{https://github.com/Kei18/mapf-IR}}
 \def \cmake {{Cmake}\urlnote{https://cmake.org/}}
-\def \makefile {{Makefile}\urlnote{https://nanomsg.org/}}
+\def \makefile {{Makefile}\urlnote{https://www.gnu.org/software/make/}}
 \def \of {{openFrameworks}\urlnote{https://github.com/Kei18/mapf-IR}}
 \def \nanomsg {{nanomsg}\urlnote{https://nanomsg.org/}}
 \def \ofxCMake {{ofxCMake}\urlnote{https://nanomsg.org/}}
