--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -5,7 +5,7 @@
 \def \mapfIR {{mapf-IR}\urlnote{https://github.com/Kei18/mapf-IR}}
 \def \cmake {{Cmake}\urlnote{https://cmake.org/}}
 \def \makefile {{Makefile}\urlnote{https://www.gnu.org/software/make/}}
-\def \of {{openFrameworks}\urlnote{https://github.com/Kei18/mapf-IR}}
+\def \of {{openFrameworks}\urlnote{https://openframeworks.cc/}}
 \def \nanomsg {{nanomsg}\urlnote{https://nanomsg.org/}}
 \def \ofxCMake {{ofxCMake}\urlnote{https://nanomsg.org/}}
 \def \ofnode {{ofnode}\urlnote{https://nanomsg.org/}}
