--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -7,7 +7,7 @@
 \def \makefile {{Makefile}\urlnote{https://www.gnu.org/software/make/}}
 \def \of {{openFrameworks}\urlnote{https://openframeworks.cc/}}
 \def \nanomsg {{nanomsg}\urlnote{https://nanomsg.org/}}
-\def \ofxCMake {{ofxCMake}\urlnote{https://nanomsg.org/}}
+\def \ofxCMake {{ofxCMake}\urlnote{https://github.com/BildPeter/ofxCMake}}
 \def \ofnode {{ofnode}\urlnote{https://nanomsg.org/}}
 \def \br {\hfill \break}
 
