--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -8,7 +8,7 @@
 \def \of {{openFrameworks}\urlnote{https://openframeworks.cc/}}
 \def \nanomsg {{nanomsg}\urlnote{https://nanomsg.org/}}
 \def \ofxCMake {{ofxCMake}\urlnote{https://github.com/BildPeter/ofxCMake}}
-\def \ofnode {{ofnode}\urlnote{https://nanomsg.org/}}
+\def \ofnode {{ofnode}\urlnote{https://github.com/ofnode/of}}
 \def \br {\hfill \break}
 
 \def \communicationUml {
