--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -1,7 +1,7 @@
 \def \kulich {RNDr. Miroslav Kulich, Ph.D.}
 \def \rybecky {Ing. Tomáš Rybecký}
-\def \oldRepo {{old version}\urlnote{https://github.com/Kei18/mapf-IR}}
-\def \oldFormat {{old format}\urlnote{https://nanomsg.org/}}
+\def \oldRepo {{old version}\urlnote{https://gitlab.ciirc.cvut.cz/tumaond2/sipp/-/tree/b1d95a6eb73ac18e0c2bed042f463db15228e8ca}}
+\def \oldFormat {{old format}\urlnote{https://gitlab.ciirc.cvut.cz/tumaond2/sipp/-/tree/b1d95a6eb73ac18e0c2bed042f463db15228e8ca}}
 \def \mapfIR {{mapf-IR}\urlnote{https://github.com/Kei18/mapf-IR}}
 \def \cmake {{Cmake}\urlnote{https://cmake.org/}}
 \def \makefile {{Makefile}\urlnote{https://www.gnu.org/software/make/}}
