--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -1,7 +1,7 @@
 \abstractEN {
     This work is analyzing and improving upon the multiagent planning system demonstrator currently used at the Department of Cybernetics.
     The main objective is to improve existing funccionality, add new features and enable the usage of {\mapfIR} format. 
-    It will greatly improve developer experience for other students working and running simulations developing alhorithms for the {\mapfIR} solver.
+    It will greatly improve developer experience for other students working and running simulations developing algorithms for the {\mapfIR} solver.
     }
 \thanks {
     I would really like to thank my supervisor
