--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -1,12 +1,12 @@
 \abstractEN {
     This work is analyzing and improving upon the multiagent planning system demonstrator currently used at the Department of Cybernetics.
     The main objective is to improve existing functionality, add new features and enable the usage of {\mapfIR} format. 
-    It will greatly improve developer experience for other students working and running simulations developing algorithms for the {\mapfIR} solver.
+    It will greatly improve the developer experience for other students working and running simulations developing algorithms for the {\mapfIR} solver.
     }
 \thanks {
     I would really like to thank my supervisor
     {\kulich} for great mentoring and guidance and providing great advice when it was needed. I would also like to thank {\rybecky} for providing the base software solution and for introducing me to the problem domain. Finally, I
-    would like to acknowledge the co-authors of the original Fleet Management System and its components, mainly Ing. Lukáš Bertl and Ing. Jakub Hvězda Ph.D..
+    would like to acknowledge the co-authors of the original Fleet Management System and its components, mainly Ing. Lukáš Bertl and Ing. Jakub Hvězda Ph.D.
     }
 \declaration {
     I declare that the presented work was developed independently and that I have listed all sources of information used within it in accordance with the methodical instructions for observing the ethical principles in the preparation of university theses.
