--- a/source/params.tex
+++ b/source/params.tex
@@ -2,7 +2,7 @@
 \workname {Semestral project}
 \faculty {F3}
 \department {Department of Cybernetics}
-\title {Multiagent planning system demonstrator}
+\title {The Multi-Agent Path Finding Demonstrator}
 \author {Tůma Ondřej}
 \supervisor {\kulich}
 \date {Prosinec 2021}
