--- a/source/params.tex
+++ b/source/params.tex
@@ -5,4 +5,4 @@
 \title {The Multi-Agent Path Finding Demonstrator}
 \author {Tůma Ondřej}
 \supervisor {\kulich}
-\date {Prosinec 2021}
+\date {May 2022}
