--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -20,5 +20,5 @@
 }
 
 \specification {
-    In collaboration with SafeLog, the laboratory demonstrator TurtleBot was created for robot fleet trajectory planning in automated warehouses. The goal of this semestral project is to analyze this framework and improve upon its codebase.
+    As part of the EU solution of the SafeLog project, a laboratory demonstrator with TurtleBot robots was created for trajectory planning for a group of robots in an automated warehouse. The aim of the thesis is to get acquainted with this environment and develop it further. The specific procedure is as follows:
 }
