--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -21,4 +21,11 @@
 
 \specification {
     As part of the EU solution of the SafeLog project, a laboratory demonstrator with TurtleBot robots was created for trajectory planning for a group of robots in an automated warehouse. The aim of the thesis is to get acquainted with this environment and develop it further. The specific procedure is as follows:
+\begitems \style n
+    * Get acquainted with the current state of development of the demonstrator and the simulator for multi-agent planning (https://github.com/Kei18/mapf-IR).
+    * Modify the simulator to serve as the basic user interface (GUI) of the demonstrator.
+    * Display robot positions obtained from the Vicon system in the GUI.
+    * Integrate the supplied components for planning and plan execution into the demonstrator.
+    * Evaluate experimentally properties of the implemented system. Describe and discuss obtained results.
+\enditems
 }
