--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -22,7 +22,7 @@
 \specification {
     As part of the EU solution of the SafeLog project, a laboratory demonstrator with TurtleBot robots was created for trajectory planning for a group of robots in an automated warehouse. The aim of the thesis is to get acquainted with this environment and develop it further. The specific procedure is as follows:
 \begitems \style n
-    \item Get acquainted with the current state of development of the demonstrator and the simulator for multi-agent planning (https://github.com/Kei18/mapf-IR).
+* Get acquainted with the current state of development of the demonstrator and the simulator for multi-agent planning (https://github.com/Kei18/mapf-IR).
     \item Modify the simulator to serve as the basic user interface (GUI) of the demonstrator.
     \item Display robot positions obtained from the Vicon system in the GUI.
     \item Integrate the supplied components for planning and plan execution into the demonstrator.
