--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -10,6 +10,7 @@
 \def \ofxCMake {{ofxCMake}\urlnote{https://github.com/BildPeter/ofxCMake}}
 \def \ofnode {{ofnode}\urlnote{https://github.com/ofnode/of}}
 \def \br {\hfill \break}
+\def \tomasMThesis {{thesis}\urlnote{https://dspace.cvut.cz/bitstream/handle/10467/76151/F3-BP-2018-Rybecky-Tomas-thesis.pdf?sequence=-1&isAllowed=y}}
 
 \def \communicationUml {
     \midinsert
