--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -5,7 +5,7 @@
 \def \mapfIR {\link[ref:mapfIR]{\Black}{mapfIR}}
 \def \cmake {{Cmake}\urlnote{https://cmake.org/}}
 \def \makefile {{Makefile}\urlnote{https://www.gnu.org/software/make/}}
-\def \of {{openFrameworks}\urlnote{https://openframeworks.cc/}}
+\def \of {\link[ref:of]{\Black}{OF}}
 \def \nanomsg {{nanomsg}\urlnote{https://nanomsg.org/}}
 \def \ofxCMake {{ofxCMake}\urlnote{https://github.com/BildPeter/ofxCMake}}
 \def \ofnode {{ofnode}\urlnote{https://github.com/ofnode/of}}
