--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -2,7 +2,7 @@
 \def \rybecky {Ing. Tomáš Rybecký}
 \def \oldRepo {{old version}\urlnote{https://gitlab.ciirc.cvut.cz/tumaond2/sipp/-/tree/b1d95a6eb73ac18e0c2bed042f463db15228e8ca}}
 \def \oldFormat {{old format}\urlnote{https://gitlab.ciirc.cvut.cz/tumaond2/sipp/-/tree/b1d95a6eb73ac18e0c2bed042f463db15228e8ca}}
-\def \mapfIR {\link[ref:mapfIR]{\Black}{mapfIR}}
+\def \mapfIR {\link[ref:mapfIR]{\Black}{\it mapfIR}}
 \def \cmake {{Cmake}\urlnote{https://cmake.org/}}
 \def \makefile {{Makefile}\urlnote{https://www.gnu.org/software/make/}}
 \def \of {\link[ref:of]{\Black}{\it OF}}
