--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -1,7 +1,7 @@
 \def \kulich {RNDr. Miroslav Kulich, Ph.D.}
 \def \rybecky {Ing. Tomáš Rybecký}
 \def \oldFormat {\link[ref:oldFormat]{\Black}{\it old format}}
-\def \oldRepo {\link[ref:oldFormat]{\Black}{\it old repository}}
+\def \oldRepo {\link[ref:oldFormat]{\Black}{\it original repository}}
 \def \mapfIR {\link[ref:mapfIR]{\Black}{\it mapfIR}}
 \def \cmake {{Cmake}\urlnote{https://cmake.org/}}
 \def \makefile {{Makefile}\urlnote{https://www.gnu.org/software/make/}}
