--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -3,7 +3,7 @@
 \def \oldFormat {\link[ref:oldFormat]{\Black}{\it old format}}
 \def \oldRepo {\link[ref:originalRepository]{\Black}{\it original project}}
 \def \mapfIR {\link[ref:mapfIR]{\Black}{\it mapfIR}}
-\def \cmake {{Cmake}\urlnote{https://cmake.org/}}
+\def \cmake {\link[ref:cmake]{\Black}{\it Cmake}}
 \def \makefile {{Makefile}\urlnote{https://www.gnu.org/software/make/}}
 \def \of {\link[ref:openFrameworks]{\Black}{\it OF}}
 \def \nanomsg {{nanomsg}\urlnote{https://nanomsg.org/}}
