--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -4,7 +4,7 @@
 \def \oldRepo {\link[ref:originalRepository]{\Black}{\it original project}}
 \def \mapfIR {\link[ref:mapfIR]{\Black}{\it mapfIR}}
 \def \cmake {\link[ref:cmake]{\Black}{\it Cmake}}
-\def \makefile {{Makefile}\urlnote{https://www.gnu.org/software/make/}}
+\def \makefile {\link[ref:makefile]{\Black}{\it Makefile}}
 \def \of {\link[ref:openFrameworks]{\Black}{\it OF}}
 \def \nanomsg {{nanomsg}\urlnote{https://nanomsg.org/}}
 \def \ofxCMake {{ofxCMake}\urlnote{https://github.com/BildPeter/ofxCMake}}
