--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -59,3 +59,11 @@
     \caption/f GUI
     \endinsert
 } 
+
+\def \fleetControlAdminPanel {
+    \midinsert
+    \clabel[fleet_control_admin_panel]{Admin panel}
+    \picw=14cm \cinspic {../assets/images/new_ui_admin_panel.png}
+    \caption/f GUI
+    \endinsert
+} 
