--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -64,6 +64,6 @@
     \midinsert
     \clabel[fleet_control_admin_panel]{Admin panel}
     \picw=8cm \cinspic {../assets/images/new_ui_admin_panel.png}
-    \caption/f GUI
+    \caption/f Admin panel
     \endinsert
 } 
