--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -60,6 +60,14 @@
     \endinsert
 } 
 
+\def \fleetControlRobotPanel {
+    \midinsert
+    \clabel[fleet_control_robot_panel]{GUI}
+    \picw=14cm \cinspic {../assets/images/fleet_control_robot_panel.png}
+    \caption/f GUI
+    \endinsert
+} 
+
 \def \fleetControlAdminPanel {
     \midinsert
     \clabel[fleet_control_admin_panel]{Admin panel}
