--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -64,7 +64,7 @@
     \midinsert
     \clabel[fleet_control_robot_panel]{GUI}
     \picw=14cm \cinspic {../assets/images/fleet_control_robot_panel.png}
-    \caption/f GUI
+    \caption/f Robot panel
     \endinsert
 } 
 
