--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -11,7 +11,7 @@
 \declaration {
     I declare that the presented work was developed independently and that I have listed all sources of information used within it in accordance with the methodical instructions for observing the ethical principles in the preparation of university theses.
     \br \br
-    \centerline {Prague, date 18. May 2020}
+    Prague, date 18. May 2020
     \signature
 }
 
