--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -19,11 +19,11 @@
     As part of the EU solution of the SafeLog project, a laboratory demonstrator with TurtleBot robots was created for trajectory planning for a group of robots in an automated warehouse. The aim of the thesis is to get acquainted with this environment and develop it further. The specific procedure is as follows:
     {
         \begitems \style x
-        \item Get acquainted with the current state of development of the demonstrator and the simulator for multi-agent planning (https://github.com/Kei18/mapf-IR).
-        \item Modify the simulator to serve as the basic user interface (GUI) of the demonstrator.
-        \item Display robot positions obtained from the Vicon system in the GUI.
-        \item Integrate the supplied components for planning and plan execution into the demonstrator.
-        \item Evaluate experimentally properties of the implemented system. Describe and discuss obtained results.
+        * Get acquainted with the current state of development of the demonstrator and the simulator for multi-agent planning (https://github.com/Kei18/mapf-IR).
+        * Modify the simulator to serve as the basic user interface (GUI) of the demonstrator.
+        * Display robot positions obtained from the Vicon system in the GUI.
+        * Integrate the supplied components for planning and plan execution into the demonstrator.
+        * Evaluate experimentally properties of the implemented system. Describe and discuss obtained results.
     \enditems
     }
 }
