--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -16,5 +16,5 @@
 }
 
 \specification {
-    As part of the EU solution of the SafeLog project, a laboratory demonstrator with TurtleBot robots was created for trajectory planning for a group of robots in an automated warehouse. The aim of the thesis is to get acquainted with this environment and develop it further.
+    As part of the EU solution of the SafeLog project, a laboratory demonstrator with TurtleBot robots was created for trajectory planning for a group of robots in an automated warehouse. The aim of the thesis is to get acquainted with this environment and develop it further. The final software should enhance the user experience and allow much broader userbase to interact with the demonstrator.
 }
