--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -1,5 +1,6 @@
 \def \kulich {RNDr. Miroslav Kulich, Ph.D.}
 \def \rybecky {Ing. Tomáš Rybecký}
+\def \safeLog {\link[ref:safeLog]{\Black}{\it SafeLog}}
 \def \oldFormat {\link[ref:oldFormat]{\Black}{\it old format}}
 \def \oldRepo {\link[ref:originalRepository]{\Black}{\it original project}}
 \def \mapfIR {\link[ref:mapfIR]{\Black}{\it mapfIR}}
