--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -73,3 +73,11 @@
     \caption/f Admin panel
     \endinsert
 } 
+
+\def \robotGrid {
+    \midinsert
+    \clabel[robot_grid]{Robot positioning grid}
+    \picw=8cm \cinspic {../assets/images/robot_grid.png}
+    \caption/f Admin panel
+    \endinsert
+} 
