--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -78,6 +78,6 @@
     \midinsert
     \clabel[robot_grid]{Robot positioning grid}
     \picw=8cm \cinspic {../assets/images/robot_grid.png}
-    \caption/f Admin panel
+    \caption/f Robot positioning grid
     \endinsert
 } 
