--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -81,3 +81,11 @@
     \caption/f Robot positioning grid
     \endinsert
 } 
+
+\def \robotExecutionPlan {
+    \midinsert
+    \clabel[robot_execution_plan]{Single robot execution plan}
+    \picw=15cm \cinspic {../assets/images/robot_execution_plan.png}
+    \caption/f Single robot execution plan
+    \endinsert
+} 
