--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -89,3 +89,11 @@
     \caption/f Single robot execution plan
     \endinsert
 } 
+
+\def \finalGrid {
+    \midinsert
+    \clabel[final_grid]{Overlayed grid}
+    \picw=15cm \cinspic {../assets/images/final_grid.png}
+    \caption/f Overlayed coordinate systems
+    \endinsert
+} 
