--- a/source/params.tex
+++ b/source/params.tex
@@ -1,7 +1,7 @@
 \worktype [O/EN]
 \workname {Bachelor thesis}
 \faculty {F3}
-\department {Department of Electrical Engineering}
+\department {Department of Cybernetics}
 \title {The Multi-Agent Path Finding Demonstrator}
 \author {Tůma Ondřej}
 \supervisor {\kulich}
