--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -4,7 +4,7 @@
     The final software should greatly improve the developer experience for future students developing algorithms for the {\mapfIR} solver, enhance the impression when presenting to $3^{rd}$ parties, and 
     }
 \thanks {
-    I would really like to thank my supervisor
+    I would like to thank my supervisor
     {\kulich} for great mentoring and guidance and providing great advice when it was needed. I would also like to thank {\rybecky} for providing the base software solution and for introducing me to the problem domain. Finally, I
     would like to acknowledge the co-authors of the original Fleet Management System and its components, mainly Ing. Lukáš Bertl and Ing. Jakub Hvězda Ph.D. The original mapfIR project also rightfully deserves appreciation.
     }
