--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -5,7 +5,7 @@
     }
 \thanks {
     I would like to thank my supervisor
-    {\kulich}, for excellent mentoring and guidance and providing great advice when it was needed. I would also like to thank {\rybecky} for providing the base software solution and for introducing me to the problem domain. Finally, I
+    {\kulich}, for excellent mentoring and guidance and providing great advice when I needed it. I would also like to thank {\rybecky} for providing the base software solution and for introducing me to the problem domain. Finally, I
     would like to acknowledge the co-authors of the original Fleet Management System and its components, mainly Ing. Lukáš Bertl and Ing. Jakub Hvězda Ph.D. The original mapfIR project also rightfully deserves appreciation.
     }
 \declaration {
