--- a/source/abstract.tex
+++ b/source/abstract.tex
@@ -1,5 +1,5 @@
 \abstractEN {
-    This work analyzes and improves upon the multiagent planning system demonstrator currently used at the Department of Cybernetics.
+    This work analyzes and improves upon the multi-agent planning system demonstrator currently used at the Department of Cybernetics.
     The main objective is to improve existing functionality, add new features and enable the usage of {\mapfIR} format. 
     The final software should significantly improve the developer experience for future students developing algorithms for the {\mapfIR} solver, enhance the impression when presenting to $3^{rd}$ parties, and 
     }
