--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -1,7 +1,7 @@
 \def \kulich {RNDr. Miroslav Kulich, Ph.D.}
 \def \rybecky {Ing. Tomáš Rybecký}
 \def \vicon {\link[ref:vicon]{\Black}{\it Vicon}}
-\def \safeLog {\link[ref:safeLog]{\Black}{\it SafeLog}}
+\def \safeLog {\link[ref:safeLog]{\Black}{\it SafeLog project}}
 \def \oldFormat {\link[ref:oldFormat]{\Black}{\it old format}}
 \def \oldRepo {\link[ref:originalRepository]{\Black}{\it original project}}
 \def \mapfIR {\link[ref:mapfIR]{\Black}{\it mapfIR}}
