--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -2,7 +2,7 @@
 \def \rybecky {Ing. Tomáš Rybecký}
 \def \vicon {\link[ref:vicon]{\Black}{\it Vicon}}
 \def \safeLog {\link[ref:safeLog]{\Black}{\it SafeLog project}}
-\def \oldFormat {\link[ref:oldFormat]{\Black}{\it old format}}
+\def \oldFormat {\link[ref:oldFormat]{\Black}{\it XML-based format}}
 \def \oldRepo {\link[ref:originalRepository]{\Black}{\it original project}}
 \def \mapfIR {\link[ref:mapfIR]{\Black}{\it mapfIR}}
 \def \cmake {\link[ref:cmake]{\Black}{\it Cmake}}
