--- a/source/definitions.tex
+++ b/source/definitions.tex
@@ -74,6 +74,22 @@
     \endinsert
 } 
 
+\def \robot_front {
+    \midinsert
+    \clabel[robot_front]{Robot front}
+    \picw=5cm \cinspic {../assets/images/robot_front.png}
+    \caption/f Robot front
+    \endinsert
+} 
+
+\def \robot_rear {
+    \midinsert
+    \clabel[robot_front]{Robot rear}
+    \picw=5cm \cinspic {../assets/images/robot_rear.png}
+    \caption/f Robot rear
+    \endinsert
+} 
+
 \def \robotGrid {
     \midinsert
     \clabel[robot_grid]{Robot positioning grid}
